# Pikachu

./: Cargo.toml  README.md  circuit.pika
src/: lib.rs  main.rs  trusted_setup.rs  verifier.rs
src/prover/: mod.rs  prover.rs  prover_polynomial.pika  witness.json
